--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,7 +1,11 @@
+@keyframes yourfirstanimation {
+  from {opacity: 0; color: red;}
+  to {opacity: 1; color: black;}
+}
+
 #about {
-  
   .biography-title {
-    font-weight: bold;
+  animation: yourfirstanimation 5s forwards;
   }
   
 }
