--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,11 +1,12 @@
-@keyframes yourfirstanimation {
-  from {opacity: 0; color: red;}
-  to {opacity: 1; color: black;}
-}
-
 #about {
+  
+  @keyframes yourfirstanimation {
+    0% {opacity: 0; color: red;}
+    100% {opacity: 1; color: black;}
+  }
+
   .biography-title {
-  animation: yourfirstanimation 5s forwards;
+    animation: yourfirstanimation 5s forwards;
   }
   
 }
