--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -73,7 +73,7 @@
   <div class="col-12 col-lg-8">
 
     {{/* Only display widget title in explicit instances of about widget, not in author pages. */}}
-    <h1 class='biography-title'>
+    {{ if and $page.Params.widget $page.Title }}<h1 class='biography-title'>{{ $page.Title | markdownify | emojify }}</h1>{{ end }}
 
   <div class='main-content'>
     {{ $person_page.Content }}
