--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,17 +1,32 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 #about {
   
+@-webkit-keyframes slide-from-right {
+  0% {-webkit-transform: translateX(150%);transform: translateX(150%)}
+  100% { -webkit-transform: translateX(0%); transform: translateX(0%); }
+}
+  
 @keyframes slide-from-right {
-  0% {transform: translateX(150%)}
-  100% { transform: translateX(0%); }
+  0% {-webkit-transform: translateX(150%);transform: translateX(150%)}
+  100% { -webkit-transform: translateX(0%); transform: translateX(0%); }
 }
 
 .biography-title {
-  animation: slide-from-right 1s forwards;
+  -webkit-animation: slide-from-right 1s forwards;
+          animation: slide-from-right 1s forwards;
 }
   
 .main-content {
-  animation: slide-from-right 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
-  animation-delay: 100ms;
+  -webkit-animation: slide-from-right 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+          animation: slide-from-right 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+  -webkit-animation-delay: 100ms;
+          animation-delay: 100ms;
 }
   
 }
