--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -34,13 +34,13 @@
   }
   
   #profile {
-    -webkit-animation: slide-from-left 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
-            animation: slide-from-left 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+    -webkit-animation: slide-from-left 100ms cubic-bezier(0.87, 0, 0.13, 1) forwards;
+            animation: slide-from-left 100ms cubic-bezier(0.87, 0, 0.13, 1) forwards;
   }
   
   .portrait-title {
-  -webkit-animation: slide-from-left 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
-          animation: slide-from-left 1s cubic-bezier(0.87, 0, 0.13, 1) forwards;
+  -webkit-animation: slide-from-left 100ms cubic-bezier(0.87, 0, 0.13, 1) forwards;
+          animation: slide-from-left 100ms cubic-bezier(0.87, 0, 0.13, 1) forwards;
   -webkit-animation-delay: 100ms;
           animation-delay: 100ms;
   }
