--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,6 +21,129 @@
     -webkit-animation-delay: 100ms;
             animation-delay: 100ms;
   }
+ .card-simple {
+  background: #fff;
+  box-shadow: none;
+  border: 0px solid rgba(0,0,0,.09);
+  border-radius: 3px;
+  margin-top: 20px;
+  padding: 15px 20px 15px 20px;
+  transition: all 0.2s ease-out;
+}
+
+.card-simple:hover {
+  box-shadow: 6px 6px 2px 0 rgba(33, 150, 186, 0.808);
+}
+
+.card-simple:first-of-type {
+  margin-top: 0;
+}
+
+.card-simple p.read-more {
+  margin: 0;
+}
+
+.dark .card-simple {
+  background: rgb(40, 42, 54);
+  box-shadow: 0 1px 4px rgba(0,0,0,.04);
+  border: 1px solid rgb(68, 71, 90);
+}
+
+.card {
+  margin-bottom: 1.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  background: #fff;
+  box-shadow: none;
+  transition: all 0.2s ease-out;
+  border: 0px solid rgba(0,0,0,.09);
+}
+
+.card .card-image {
+  display: block;
+  position: relative;
+  min-height: 100px;
+}
+
+.card h4 {
+  font-size: 0.9rem;
+  font-weight: 700;
+  line-height: 1.5;
+  text-transform: none;
+}
+
+.card h4 code {
+  font-size: 0.93rem;
+  color: #D90429;
+  background:  rgba(226, 226, 226, 0.315);
+}
+
+.card h4 a {
+  color: #000;
+  border-bottom: solid 1px transparent;
+}
+
+.card h4 a:hover {
+  color: #000;
+  border-bottom: solid 1px #000;
+  text-decoration: none;
+}
+
+.card .card-text {
+  padding: 1rem;
+}
+
+.card .card-text p {
+  color: rgba(0,0,0,0.54);
+  font-size: 0.75rem;
+}
+
+.card p:last-child {
+  margin-bottom: 0;
+}
+
+.card .card-image.hover-overlay:before {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #fff;
+  content: " ";
+  opacity: 0;
+  transition: all 0.2s ease-out;
+}
+
+.card .card-image.hover-overlay:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  transform: translate(0, -50%);
+  opacity: 0;
+  transition: all 0.2s ease-out;
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f0c1';
+  text-align: center;
+  font-size: 3rem;
+  color: rgba(0,0,0,.09);
+  border: 0px solid rgba(0,0,0,.09);
+}
+
+.card:hover {
+  box-shadow: 6px 6px 2px 0 rgba(33, 150, 186, 0.808);
+}
+
+.card:hover .card-image.hover-overlay:before {
+  opacity: 0.8;
+}
+
+.card:hover .card-image.hover-overlay:after {
+  opacity: 0.6;
+}
   
   @-webkit-keyframes slide-from-left {
     0% {-webkit-transform: translateX(-150%);transform: translateX(-150%)}
