--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -21,130 +21,81 @@
   -webkit-animation-delay: 100ms;
           animation-delay: 100ms;
 }
-  .card-simple {
-  background: #fff;
-  box-shadow: none;
-  border: 0px solid rgba(0,0,0,.09);
-  border-radius: 3px;
-  margin-top: 20px;
-  padding: 15px 20px 15px 20px;
-  transition: all 0.2s ease-out;
-  }
 
-  .card-simple:hover {
-  box-shadow: 6px 6px 2px 0 rgba(33, 150, 186, 0.808);
-  }
-
-  .card-simple:first-of-type {
-  margin-top: 0;
-  }
-
-  .card-simple p.read-more {
-  margin: 0;
-  }
-
-  .dark .card-simple {
-  background: rgb(40, 42, 54);
-  box-shadow: 0 1px 4px rgba(0,0,0,.04);
-  border: 1px solid rgb(68, 71, 90);
-  }
-
-  .card {
-  margin-bottom: 1.5rem;
+.card-about {
   overflow: hidden;
   text-overflow: ellipsis;
   background: #fff;
-  box-shadow: none;
+  box-shadow: 8px 8px 0 0 #2196BA;
   transition: all 0.2s ease-out;
-  border: 0px solid rgba(0,0,0,.09);
-  }
+  border: 1px solid #2196BA;
+  border-radius: 10px;
+  padding: 2rem;
+  font-family: 'Work Sans';
+  font-size: .98rem;
+  background-color: #F7F7F7;
+}
 
-  .card .card-image {
-  display: block;
-  position: relative;
-  min-height: 100px;
-  }
+.card-about a {
+  color: rgba(0,0,0,0.8);
+  border-bottom: 1.5px #D90429 dotted;
+  cursor: pointer;
+}
 
-  .card h4 {
-  font-size: 0.9rem;
-  font-weight: 700;
-  line-height: 1.5;
-  text-transform: none;
-  }
+.card-about a:hover {
+  border-bottom: 1.5px #0EAD69 dotted;
+  text-decoration: none !important;
+  color: #0EAD69;
+  cursor: pointer;
+  transition: color 0.6s ease;
+}
 
-  .card h4 code {
-  font-size: 0.93rem;
-  color: #D90429;
-  background:  rgba(226, 226, 226, 0.315);
-  }
+.about-page .row {
+  height: calc(100vh - 85px);
+  display: flex;
+  align-items: center;
+}
 
-  .card h4 a {
-  color: #000;
-  border-bottom: solid 1px transparent;
-  }
+.about-page h1 {
+  text-align: right;
+  margin-bottom: 25rem;
+  animation: bounceInLeft 1s both;
+}
 
-  .card h4 a:hover {
-  color: #000;
-  border-bottom: solid 1px #000;
-  text-decoration: none;
-  }
-
-  .card .card-text {
-  padding: 1rem;
-  }
-
-  .card .card-text p {
-  color: rgba(0,0,0,0.54);
-  font-size: 0.75rem;
-  }
-
-  .card p:last-child {
-  margin-bottom: 0;
-  }
-
-  .card .card-image.hover-overlay:before {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  content: " ";
-  opacity: 0;
-  transition: all 0.2s ease-out;
-  }
-
-  .card .card-image.hover-overlay:after {
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  width: 100%;
-  transform: translate(0, -50%);
-  opacity: 0;
-  transition: all 0.2s ease-out;
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f0c1';
+.about-page .row h3 {
   text-align: center;
-  font-size: 3rem;
-  color: rgba(0,0,0,.09);
-  border: 0px solid rgba(0,0,0,.09);
-  }
+  font-weight: bold;
+  animation: fadeInDown 3s both;
+  animation-delay: 1s;
+}
+.about-page .row h3 a {
+  color: rgba(0,0,0,0.8);
+}
 
-  .card:hover {
-  box-shadow: 6px 6px 2px 0 rgba(33, 150, 186, 0.808);
+@media screen and (max-width: 1199px) {
+  .about-page h1 {
+    text-align: left;
+    margin-bottom: 0rem;
   }
-
-  .card:hover .card-image.hover-overlay:before {
-  opacity: 0.8;
+  .about-page .row {
+    height: auto;
   }
-
-  .card:hover .card-image.hover-overlay:after {
-  opacity: 0.6;
+  .card-about {
+    font-size: 13pt;
   }
+  .card .card-text p {
+    color: rgba(0,0,0,0.54);
+    font-size: 12pt;
+  }
+}
 
+@media screen and (max-width: 768px) {
+  .about-page h1 {
+    text-align: left;
+    margin-bottom: 0rem;
+  }
+}  
+  
 @-webkit-keyframes slide-from-left {
   0% {-webkit-transform: translateX(-150%);transform: translateX(-150%)}
   100% { -webkit-transform: translateX(0%); transform: translateX(0%); }
